--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@ function downloadMeme() {
   link.href = canvas.toDataURL('image/png');
   link.click();
 }
-
+<a href="/meme-lab.html">🐻 MEME LAB →</a>
 init();
 </script>
 </body>
